[package]
name = "bevy_geo_tiles"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", features = [
    "bevy_dev_tools",
    "dynamic_linking",
    "http",
    "https",
    "track_location",
] }
miniproj = "0.10"
miniproj-ops = "0.10"
tilemath = "0.3.0"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
] }
earcut = "0.4.4"
lyon = "1.0.16"

[profile.dev]
opt-level = 3
